--- a/ros2_ws/src/challenge_actions/package.xml
+++ b/ros2_ws/src/challenge_actions/package.xml
@@ -9,6 +9,7 @@
 
   <depend>rclpy</depend>
   <depend>challenge_actions_interfaces</depend>
+  <depend>example_interfaces</depend>
 
   <test_depend>ament_copyright</test_depend>
   <test_depend>ament_flake8</test_depend>
