--- a/ros2_ws/src/components_cpp/package.xml
+++ b/ros2_ws/src/components_cpp/package.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0"?>
 <?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
 <package format="3">
-  <name>lifecycle_cpp</name>
+  <name>components_cpp</name>
   <version>0.0.0</version>
   <description>TODO: Package description</description>
   <maintainer email="alejandroamar66@gmail.com">arthemis</maintainer>
@@ -10,11 +10,8 @@
   <buildtool_depend>ament_cmake</buildtool_depend>
 
   <depend>rclcpp</depend>
-  <depend>rclcpp_lifecycle</depend>
+  <depend>rclcpp_components</depend>
   <depend>example_interfaces</depend>
-  <depend>rclcpp_action</depend>
-  <depend>challenge_actions_interfaces</depend>
-
 
   <test_depend>ament_lint_auto</test_depend>
   <test_depend>ament_lint_common</test_depend>
