--- a/ros2_ws/src/executors_cpp/package.xml
+++ b/ros2_ws/src/executors_cpp/package.xml
@@ -1,20 +1,14 @@
 <?xml version="1.0"?>
 <?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
 <package format="3">
-  <name>lifecycle_cpp</name>
+  <name>executors_cpp</name>
   <version>0.0.0</version>
   <description>TODO: Package description</description>
   <maintainer email="alejandroamar66@gmail.com">arthemis</maintainer>
   <license>TODO: License declaration</license>
 
   <buildtool_depend>ament_cmake</buildtool_depend>
-
   <depend>rclcpp</depend>
-  <depend>rclcpp_lifecycle</depend>
-  <depend>example_interfaces</depend>
-  <depend>rclcpp_action</depend>
-  <depend>challenge_actions_interfaces</depend>
-
 
   <test_depend>ament_lint_auto</test_depend>
   <test_depend>ament_lint_common</test_depend>
