--- a/ros2_ws/src/lifecycle_cpp/CMakeLists.txt
+++ b/ros2_ws/src/lifecycle_cpp/CMakeLists.txt
@@ -10,11 +10,18 @@ find_package(ament_cmake REQUIRED)
 find_package(rclcpp REQUIRED)
 find_package(example_interfaces REQUIRED)
 find_package(rclcpp_lifecycle REQUIRED)
+find_package(challenge_actions_interfaces REQUIRED)
+find_package(rclcpp_action REQUIRED)
+
 
 add_executable(number_publisher src/number_publisher.cpp)
 ament_target_dependencies(number_publisher rclcpp example_interfaces rclcpp_lifecycle)
 
+add_executable(move_robot_server src/move_robot_server.cpp)
+ament_target_dependencies(move_robot_server rclcpp rclcpp_lifecycle rclcpp_action challenge_actions_interfaces)
+
 install(TARGETS
+    move_robot_server
     number_publisher
     DESTINATION lib/${PROJECT_NAME}/
 )
