--- a/ros2_ws/src/my_robot_interfaces/CMakeLists.txt
+++ b/ros2_ws/src/my_robot_interfaces/CMakeLists.txt
@@ -11,6 +11,7 @@ find_package(ament_cmake REQUIRED)
 find_package(rosidl_default_generators REQUIRED)
 rosidl_generate_interfaces(${PROJECT_NAME}
   "action/CountUntil.action"
+  "action/MoveTurtle.action"
 )
 
 ament_export_dependencies(rosidl_default_runtime)
