--- a/ros2_ws/src/final_project_cpp/package.xml
+++ b/ros2_ws/src/final_project_cpp/package.xml
@@ -13,6 +13,7 @@
   <depend>turtlesim</depend>
   <depend>geometry_msgs</depend>
   <depend>my_robot_interfaces</depend>
+  <depend>rclcpp_components</depend>
   <depend>rclcpp_action</depend>
   <depend>rclcpp_lifecycle</depend>
 
